completed stretch of fixed  nav-bar with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -161,9 +161,11 @@ p {
   margin: 0 auto;
 }
 .navigation {
+  position: sticky;
   top: 0px;
+  z-index: 100;
   width: 100%;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.9);
   display: flex;
   flex-direction: column;
   justify-content: center;
