--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,10 @@
 // Navigation code here
 .navigation{
+    position: sticky;
     top:0px;
+    z-index: 100;
     width: 100%;
-    background-color: @wild-sand;
+    background-color: fadeout(@wild-sand, 10%) ;
 
     .display-flex(column, center, center);
     padding:15px 0px;
